[metadata]
name = WorldTraderSim
provides = WorldTraderSim
version = 0.1.0
description = A world trader simulation used to explore and experiment with AI search strategies
long_description = file: README.md
long_description_content_type = text/markdown
author = John Ford
author_email = john.c.ford@vanderbilt.edu
maintainer = John Ford
maintainer_email = john.c.ford@vanderbilt.edu
license = GPL 3
license_files = LICENSE
url = https://github.com/johnford2002/CS-5260
download_url = https://github.com/johnford2002/CS-5260
project_urls =
   Source = https://github.com/johnford2002/CS-5260
classifiers =
   Environment :: Console
   Environment :: Other Environment
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11
   Operating System :: POSIX :: Linux
   Operating System :: MacOS :: MacOS X
   Operating System :: Microsoft :: Windows
   Intended Audience :: Science/Research
   Natural Language :: English
platforms = Linux, Darwin, Windows
readme = README.rst

[options]
zip_safe = True
include_package_data = False
package_dir =
   = src
packages = find:
python_requires = >=3.8, <3.12
setup_requires =
   setuptools
   wheel

[options.packages.find]
where = src
